# gripe

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: gripe.rb
npm/: install.js  package.json  run.js
src/: body_formatter.rs  config.rs  defaults.rs  gh.rs  git.rs  github_templates.rs  main.rs  types.rs
src/commands/: init.rs  mod.rs  schema.rs  submit.rs
