[package]
name = "gripe"
version = "0.1.0"
edition = "2021"
description = "Submit structured feedback as GitHub issues"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dialoguer = "0.11"
colored = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
